fix: Alignment in docs header (#54)

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -197,7 +197,7 @@
   > header.documentation-header {
     display: flex;
     flex-flow: row nowrap;
-    align-items: stretch;
+    align-items: center;
     padding: 0 0 0 2em;
     position: fixed;
     left: 0;
